added contact and footer sections

--- a/index.html
+++ b/index.html
@@ -78,7 +78,38 @@
           <li><i class="fa-brands fa-github"></i></li>
         </ul>
       </section>
+
+      <section id="contact">
+        <h2 class="section-heading">Contact Me</h2>
+        <form action="" method="post">
+          <input
+            type="text"
+            id="name"
+            name="name"
+            required
+            placeholder="Name"
+          />
+
+          <input
+            type="text"
+            id="email"
+            name="email"
+            required
+            placeholder="Email"
+          />
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Type your message"
+            rows="8"
+            cols="40"
+          ></textarea>
+          <input type="submit" value="Send" />
+        </form>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h3>Alper Yildiz</h3>
+    </footer>
   </body>
 </html>
