--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="menu">
           <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#skills">Skils</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
