--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <section id="skills">
         <h2 class="section-heading">Skills</h2>
-        <ul class="menu">
+        <ul class="skill-list">
           <li><i class="fa-brands fa-html5"></i></li>
           <li><i class="fa-brands fa-css"></i></li>
           <li><i class="fa-brands fa-js"></i></li>
