added coding time

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Personal WebPage on Github!</title>
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+
     <script
       src="https://kit.fontawesome.com/85e624ca9a.js"
       crossorigin="anonymous"
@@ -110,6 +110,8 @@
     </main>
     <footer>
       <h3>Alper Yildiz</h3>
+      <h4>Been coding for <span id="date-coding"></span></h4>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
