--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
     <footer>
       <h3>Alper Yildiz</h3>
-      <h4>Been coding for <span id="date-coding"></span></h4>
+      <p>Been coding for <span id="date-coding"></span></p>
     </footer>
     <script src="script.js"></script>
   </body>
