Added dark mode based on time of the day

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             gap between scientific innovation and modern software development.
           </p>
         </div>
-        <img id="profile-pic" src="alper.png" alt="Alper's profile picture." />
+        <img
+          id="profile-pic"
+          src="alper copy.png"
+          alt="Alper's profile picture."
+        />
       </section>
 
       <section id="projects">
