--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
+          <button type="button">Dark mode</button>
         </ul>
       </nav>
     </header>
